Closed
Bug 932875
Opened 12 years ago
Closed 12 years ago
Page load fails on kunagi.org
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
VERIFIED
FIXED
mozilla28
| Tracking | Status | |
|---|---|---|
| firefox26 | --- | unaffected |
| firefox27 | - | verified |
| firefox28 | - | verified |
People
(Reporter: alice0775, Assigned: bhackett1024)
References
()
Details
(Keywords: regression)
Attachments
(2 files)
|
136.39 KB,
text/plain
|
Details | |
|
8.17 KB,
patch
|
jandem
:
review+
bajaj
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
Build Identifier:
http://hg.mozilla.org/mozilla-central/rev/829d7bef8b0a
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:28.0) Gecko/20100101 Firefox/28.0 ID:20131030030201
Steps To Reproduce:
1. Open http://kunagi.org/
2. Click "Start Demo" orange button
3. Type Username:demo password:demo in "Login with Password" section
4. Click "Login" button
5. Click Sprint at the left side menu
6. Click Product at the left side menu
7. Repeat frop step.1 if not reproduce the problem
Actual Reuslts:
Unexpected Error
AttachDetachException: Exception caught: 2 exceptions caught: Exception caught: (TypeError)
...
Detail, see Attached
In Web Consore:
01:32:05.285 "Thu Oct 31 01:32:05 GMT+900 2013
ERROR ScrumGwtApplication Unexpected error
com.google.gwt.event.shared.UmbrellaException: Exception caught: Exception caught: 2 exceptions caught: Exception caught: (TypeError)
stack: qxb@https://servisto.de/kunagi-demo/scrum.ScrumGwtApplication/84D7DACDBE38EB45384B6270FC1835F1.cache.html:5170
Owb@https://servisto.de/kunagi-demo/scrum.ScrumGwtApplication/84D7DACDBE38EB45384B6270FC1835F1.cache.html:5560
uwb@https://servisto.de/kunagi-demo/scrum.ScrumGwtApplication/84D7DACDBE38EB45384B6270FC1835F1.cache.html:5191
Ewb@https://servisto.de/kunagi-demo/scrum.ScrumGwtApplication/84D7DACDBE38EB45384B6270FC1835F1.cache.html:5560
txb@https://servisto.de/kunagi-demo/scrum.ScrumGwtApplication/84D7DACDBE38EB45384B6270FC1835F1.cache.html:5560
qxb@https://servisto.de/kunagi-demo/scrum.ScrumGwtApplication/84D7DACDBE38EB45384B6270FC1835F1.cache.html:5170
Owb@https://servisto.de/kunagi-demo/scrum.ScrumGwtApplication/84D7DACDBE38EB45384B6270FC1835F1.cache.html:55"[…] 84D7DACDBE38EB45384B6270FC1835F1.cache.html:3522
Regression window(m-c)
Good:
http://hg.mozilla.org/mozilla-central/rev/1a2d9a04ffb2
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:27.0) Gecko/20100101 Firefox/27.0 ID:20130927090306
Bad:
http://hg.mozilla.org/mozilla-central/rev/e1914e294152
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:27.0) Gecko/20100101 Firefox/27.0 ID:20130927191437
Pushlog:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=1a2d9a04ffb2&tochange=e1914e294152
Regression window(m-i)
Good:
http://hg.mozilla.org/integration/mozilla-inbound/rev/19af7baaf26e
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:27.0) Gecko/20100101 Firefox/27.0 ID:20130927102235
Bad:
http://hg.mozilla.org/integration/mozilla-inbound/rev/3f8e57e07eee
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:27.0) Gecko/20100101 Firefox/27.0 ID:20130927103035
Pushlog:
http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=19af7baaf26e&tochange=3f8e57e07eee
regressed by:
3f8e57e07eee Brian Hackett — Bug 920689 - Only include types for 'own' properties in heap type sets, r=jandem.
| Reporter | ||
Comment 1•12 years ago
|
||
s/frop/from/
Comment 2•12 years ago
|
||
bhackett,
Can you look into this and also let us know what kind of impact this would have?
Flags: needinfo?(bhackett1024)
Comment 3•12 years ago
|
||
Specifically, whether this will be an issue impacting many websites. Thanks for following up on this Benjamin!
Updated•12 years ago
|
status-firefox26:
--- → unaffected
status-firefox27:
--- → affected
status-firefox28:
--- → affected
| Assignee | ||
Comment 4•12 years ago
|
||
I get 'Login failed' at step 3.
| Reporter | ||
Comment 6•12 years ago
|
||
OK, the following STR may helps.
Steps To Reproduce:
1. Open http://kunagi.org/
2. Click "Start Demo" orange button
3. Click "Create new account" link
4. Type Username:xxxx password:yyyy (xxxx,yyyy: any unique word)
5. Click "Create account" button
6. Click "Create Example Project" button at the top-right
7. Click "Open Project" button
8. Click all "Sprint" "Produce" "Project" "Collaboration" "Settings" "Dashboard" link at the left side menu
9. Repeat Step#8 if not reproduce the problem
Flags: needinfo?(alice0775)
| Assignee | ||
Comment 7•12 years ago
|
||
This fixes the error for me. This took a while to track down but the problem seems to be that the logic in annotateGetPropertyCache was messed up by bug 920689 (though it wasn't quite right before either, for objects where the called property is missing or is fetched from a proxy etc.). This patch consolidates the logic with that of testSingletonProperty, which is essentially doing the same thing.
Assignee: nobody → bhackett1024
Attachment #828397 -
Flags: review?(jdemooij)
Flags: needinfo?(bhackett1024)
Comment 8•12 years ago
|
||
Comment on attachment 828397 [details] [diff] [review]
patch
Review of attachment 828397 [details] [diff] [review]:
-----------------------------------------------------------------
Nice.
::: js/src/jit/IonBuilder.cpp
@@ +6066,5 @@
> *testObject = (obj->type() != MIRType_Object);
> return true;
> }
> default:
> return true;
Pre-existing, but this should be |return false;| I think.
Attachment #828397 -
Flags: review?(jdemooij) → review+
| Assignee | ||
Comment 9•12 years ago
|
||
Comment 10•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla28
Comment 11•12 years ago
|
||
This looks like a good patch to uplift (on aurora) but assuming this may not impact of lot of websites, no need to track.
Updated•12 years ago
|
| Assignee | ||
Comment 12•12 years ago
|
||
Comment on attachment 828397 [details] [diff] [review]
patch
[Approval Request Comment]
Bug caused by (feature/regressing bug #): 920689
User impact if declined: broken websites
Testing completed (on m-c, etc.): on m-c
Risk to taking this patch (and alternatives if risky): low
Attachment #828397 -
Flags: approval-mozilla-aurora?
Updated•12 years ago
|
Attachment #828397 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 13•12 years ago
|
||
Doesn't apply cleanly due to bug 930048 not being on Aurora. Please provide a branch-specific patch or nominate that for uplift.
Flags: needinfo?(bhackett1024)
Keywords: branch-patch-needed
| Assignee | ||
Comment 14•12 years ago
|
||
Flags: needinfo?(bhackett1024)
Updated•12 years ago
|
Keywords: branch-patch-needed
Comment 15•12 years ago
|
||
I can't reproduce this issue, after following the STR from comment 6, with the Nightly 32-bit build from 2013-09-27, build ID: 20130927030202.
Any thoughts/suggestions? Thanks!
Flags: needinfo?(alice0775)
| Reporter | ||
Comment 16•12 years ago
|
||
(In reply to Manuela Muntean [:Manuela] [QA] from comment #15)
> I can't reproduce this issue, after following the STR from comment 6, with
> the Nightly 32-bit build from 2013-09-27, build ID: 20130927030202.
>
> Any thoughts/suggestions? Thanks!
You should try 2013-09-28 nightly Nightly build
Flags: needinfo?(alice0775)
Comment 17•12 years ago
|
||
> You should try 2013-09-28 nightly Nightly build
Indeed, with the Nightly from that date, the issue is reproducible.
Verified as fixed on Win 7 64-bit, with both latest Nightly & Aurora builds.
You need to log in
before you can comment on or make changes to this bug.
Description
•