Bug 932875 - Fix logic annotating type object -> function maps in callprop caches, r=jandem.